--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -967,6 +967,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/post/almost-done/">Almost Done</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
